name:                  apa-proj2
version:               0.1
synopsis:              Utilities for a simple, implicitly typed functional
                       language.
license:               MIT
license-file:          LICENSE
category:              Compilers/Interpreters
author:                Jurriën, Ruben, Paul
maintainer:            paul@denknerd.org
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Apa
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.6

executable parse-hm
  main-is:             Main.hs
  build-depends:       base, cco >= 0.0.4, containers >= 0.4
  other-modules:       APA2.HM, APA2.AG, APA2.Lexer, APA2.Parser
  hs-source-dirs:      src
