name:                  apa-proj2
version:               0.1
synopsis:              Utilities for a simple, implicitly typed functional
                       language.
license:               MIT
license-file:          LICENSE
category:              Compilers/Interpreters
author:                Jurriën, Ruben, Paul
maintainer:            paul@denknerd.org
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Apa
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.6

executable cfa
  main-is:             Main.hs
  build-depends:       base, containers >= 0.4, syb >= 0.3, haskell-src-exts, multiset >= 0.2.1
  hs-source-dirs:      src
  Ghc-Options:         -Wall -fwarn-tabs
